Compress Java core guides to junior level (batch 1)